Wrapped long urls & fixed scroll-up font size

--- a/static/css/less/freelancer.less
+++ b/static/css/less/freelancer.less
@@ -372,7 +372,7 @@ footer {
     height: 50px;
     z-index: 1049;
     .btn {
-    	font-size: 20px;
+    	//font-size: 20px;
 	    width: 50px;
 	    height: 50px;
 	    border-radius: 100%;
